parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSAND
    CONST
    FMT
    FOR
    LBRACKET
    MAIN
    PRINTLN
    RBRACKET
    RETURN
    RSHIFT_ASSIGN
    SUMAR
    TYPE

Grammar

Rule 0     S' -> program
Rule 1     program -> top_declaration_list
Rule 2     top_declaration_list -> top_declaration top_declaration_list
Rule 3     top_declaration_list -> top_declaration
Rule 4     top_declaration -> PACKAGE ID
Rule 5     top_declaration -> IMPORT STRING_LITERAL
Rule 6     top_declaration -> FUNC ID LPAREN param_list RPAREN func_return LBRACE statement_list RBRACE
Rule 7     func_return -> type_spec
Rule 8     func_return -> empty
Rule 9     param_list -> param COMMA param_list
Rule 10    param_list -> param
Rule 11    param_list -> empty
Rule 12    param -> ID type_spec
Rule 13    statement_list -> statement statement_list
Rule 14    statement_list -> empty
Rule 15    statement -> VAR ID type_spec ASSIGN expression SEMI_OPTIONAL
Rule 16    statement -> VAR ID type_spec SEMI_OPTIONAL
Rule 17    statement -> ID DECLARE_ASSIGN expression SEMI_OPTIONAL
Rule 18    statement -> ID ASSIGN expression SEMI_OPTIONAL
Rule 19    statement -> assign_statement SEMI_OPTIONAL
Rule 20    statement -> control_structure
Rule 21    statement -> expression SEMI_OPTIONAL
Rule 22    statement -> SEMI
Rule 23    type_spec -> INT_TYPE
Rule 24    type_spec -> FLOAT_TYPE
Rule 25    type_spec -> STRING_TYPE
Rule 26    type_spec -> BOOL_TYPE
Rule 27    control_structure -> IF expression LBRACE statement_list RBRACE else_part
Rule 28    else_part -> ELSE LBRACE statement_list RBRACE
Rule 29    else_part -> empty
Rule 30    arg_list -> expression COMMA arg_list
Rule 31    arg_list -> expression
Rule 32    arg_list -> empty
Rule 33    expression -> expression PLUS expression
Rule 34    expression -> expression MINUS expression
Rule 35    expression -> expression TIMES expression
Rule 36    expression -> expression DIVIDE expression
Rule 37    expression -> expression MODULO expression
Rule 38    expression -> expression OR expression
Rule 39    expression -> expression AND expression
Rule 40    expression -> expression EQ expression
Rule 41    expression -> expression NE expression
Rule 42    expression -> expression LT expression
Rule 43    expression -> expression LE expression
Rule 44    expression -> expression GT expression
Rule 45    expression -> expression GE expression
Rule 46    expression -> expression BIT_OR expression
Rule 47    expression -> expression BIT_XOR expression
Rule 48    expression -> expression AND_NOT expression
Rule 49    expression -> expression LSHIFT expression
Rule 50    expression -> expression RSHIFT expression
Rule 51    expression -> MINUS expression
Rule 52    expression -> NOT expression
Rule 53    expression -> factor
Rule 54    assign_statement -> ID LSHIFT_ASSIGN expression
Rule 55    assign_statement -> ID PLUS_ASSIGN expression
Rule 56    assign_statement -> ID MINUS_ASSIGN expression
Rule 57    assign_statement -> ID TIMES_ASSIGN expression
Rule 58    assign_statement -> ID DIVIDE_ASSIGN expression
Rule 59    assign_statement -> ID MOD_ASSIGN expression
Rule 60    assign_statement -> ID AND_ASSIGN expression
Rule 61    assign_statement -> ID OR_ASSIGN expression
Rule 62    assign_statement -> ID XOR_ASSIGN expression
Rule 63    SEMI_OPTIONAL -> SEMI
Rule 64    SEMI_OPTIONAL -> empty
Rule 65    factor -> INTEGER
Rule 66    factor -> FLOAT
Rule 67    factor -> STRING_LITERAL
Rule 68    factor -> RAW_STRING
Rule 69    factor -> ID
Rule 70    factor -> BOOL_LITERAL
Rule 71    factor -> ID DOT ID LPAREN arg_list RPAREN
Rule 72    factor -> LPAREN expression RPAREN
Rule 73    empty -> <empty>

Terminals, with rules where they appear

AMPERSAND            : 
AND                  : 39
AND_ASSIGN           : 60
AND_NOT              : 48
ASSIGN               : 15 18
BIT_OR               : 46
BIT_XOR              : 47
BOOL_LITERAL         : 70
BOOL_TYPE            : 26
COMMA                : 9 30
CONST                : 
DECLARE_ASSIGN       : 17
DIVIDE               : 36
DIVIDE_ASSIGN        : 58
DOT                  : 71
ELSE                 : 28
EQ                   : 40
FLOAT                : 66
FLOAT_TYPE           : 24
FMT                  : 
FOR                  : 
FUNC                 : 6
GE                   : 45
GT                   : 44
ID                   : 4 6 12 15 16 17 18 54 55 56 57 58 59 60 61 62 69 71 71
IF                   : 27
IMPORT               : 5
INTEGER              : 65
INT_TYPE             : 23
LBRACE               : 6 27 28
LBRACKET             : 
LE                   : 43
LPAREN               : 6 71 72
LSHIFT               : 49
LSHIFT_ASSIGN        : 54
LT                   : 42
MAIN                 : 
MINUS                : 34 51
MINUS_ASSIGN         : 56
MODULO               : 37
MOD_ASSIGN           : 59
NE                   : 41
NOT                  : 52
OR                   : 38
OR_ASSIGN            : 61
PACKAGE              : 4
PLUS                 : 33
PLUS_ASSIGN          : 55
PRINTLN              : 
RAW_STRING           : 68
RBRACE               : 6 27 28
RBRACKET             : 
RETURN               : 
RPAREN               : 6 71 72
RSHIFT               : 50
RSHIFT_ASSIGN        : 
SEMI                 : 22 63
STRING_LITERAL       : 5 67
STRING_TYPE          : 25
SUMAR                : 
TIMES                : 35
TIMES_ASSIGN         : 57
TYPE                 : 
VAR                  : 15 16
XOR_ASSIGN           : 62
error                : 

Nonterminals, with rules where they appear

SEMI_OPTIONAL        : 15 16 17 18 19 21
arg_list             : 30 71
assign_statement     : 19
control_structure    : 20
else_part            : 27
empty                : 8 11 14 29 32 64
expression           : 15 17 18 21 27 30 31 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52 54 55 56 57 58 59 60 61 62 72
factor               : 53
func_return          : 6
param                : 9 10
param_list           : 6 9
program              : 0
statement            : 13
statement_list       : 6 13 27 28
top_declaration      : 2 3
top_declaration_list : 1 2
type_spec            : 7 12 15 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . top_declaration_list
    (2) top_declaration_list -> . top_declaration top_declaration_list
    (3) top_declaration_list -> . top_declaration
    (4) top_declaration -> . PACKAGE ID
    (5) top_declaration -> . IMPORT STRING_LITERAL
    (6) top_declaration -> . FUNC ID LPAREN param_list RPAREN func_return LBRACE statement_list RBRACE

    PACKAGE         shift and go to state 4
    IMPORT          shift and go to state 5
    FUNC            shift and go to state 6

    program                        shift and go to state 1
    top_declaration_list           shift and go to state 2
    top_declaration                shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> top_declaration_list .

    $end            reduce using rule 1 (program -> top_declaration_list .)


state 3

    (2) top_declaration_list -> top_declaration . top_declaration_list
    (3) top_declaration_list -> top_declaration .
    (2) top_declaration_list -> . top_declaration top_declaration_list
    (3) top_declaration_list -> . top_declaration
    (4) top_declaration -> . PACKAGE ID
    (5) top_declaration -> . IMPORT STRING_LITERAL
    (6) top_declaration -> . FUNC ID LPAREN param_list RPAREN func_return LBRACE statement_list RBRACE

    $end            reduce using rule 3 (top_declaration_list -> top_declaration .)
    PACKAGE         shift and go to state 4
    IMPORT          shift and go to state 5
    FUNC            shift and go to state 6

    top_declaration                shift and go to state 3
    top_declaration_list           shift and go to state 7

state 4

    (4) top_declaration -> PACKAGE . ID

    ID              shift and go to state 8


state 5

    (5) top_declaration -> IMPORT . STRING_LITERAL

    STRING_LITERAL  shift and go to state 9


state 6

    (6) top_declaration -> FUNC . ID LPAREN param_list RPAREN func_return LBRACE statement_list RBRACE

    ID              shift and go to state 10


state 7

    (2) top_declaration_list -> top_declaration top_declaration_list .

    $end            reduce using rule 2 (top_declaration_list -> top_declaration top_declaration_list .)


state 8

    (4) top_declaration -> PACKAGE ID .

    PACKAGE         reduce using rule 4 (top_declaration -> PACKAGE ID .)
    IMPORT          reduce using rule 4 (top_declaration -> PACKAGE ID .)
    FUNC            reduce using rule 4 (top_declaration -> PACKAGE ID .)
    $end            reduce using rule 4 (top_declaration -> PACKAGE ID .)


state 9

    (5) top_declaration -> IMPORT STRING_LITERAL .

    PACKAGE         reduce using rule 5 (top_declaration -> IMPORT STRING_LITERAL .)
    IMPORT          reduce using rule 5 (top_declaration -> IMPORT STRING_LITERAL .)
    FUNC            reduce using rule 5 (top_declaration -> IMPORT STRING_LITERAL .)
    $end            reduce using rule 5 (top_declaration -> IMPORT STRING_LITERAL .)


state 10

    (6) top_declaration -> FUNC ID . LPAREN param_list RPAREN func_return LBRACE statement_list RBRACE

    LPAREN          shift and go to state 11


state 11

    (6) top_declaration -> FUNC ID LPAREN . param_list RPAREN func_return LBRACE statement_list RBRACE
    (9) param_list -> . param COMMA param_list
    (10) param_list -> . param
    (11) param_list -> . empty
    (12) param -> . ID type_spec
    (73) empty -> .

    ID              shift and go to state 12
    RPAREN          reduce using rule 73 (empty -> .)

    param_list                     shift and go to state 13
    param                          shift and go to state 14
    empty                          shift and go to state 15

state 12

    (12) param -> ID . type_spec
    (23) type_spec -> . INT_TYPE
    (24) type_spec -> . FLOAT_TYPE
    (25) type_spec -> . STRING_TYPE
    (26) type_spec -> . BOOL_TYPE

    INT_TYPE        shift and go to state 17
    FLOAT_TYPE      shift and go to state 18
    STRING_TYPE     shift and go to state 19
    BOOL_TYPE       shift and go to state 20

    type_spec                      shift and go to state 16

state 13

    (6) top_declaration -> FUNC ID LPAREN param_list . RPAREN func_return LBRACE statement_list RBRACE

    RPAREN          shift and go to state 21


state 14

    (9) param_list -> param . COMMA param_list
    (10) param_list -> param .

    COMMA           shift and go to state 22
    RPAREN          reduce using rule 10 (param_list -> param .)


state 15

    (11) param_list -> empty .

    RPAREN          reduce using rule 11 (param_list -> empty .)


state 16

    (12) param -> ID type_spec .

    COMMA           reduce using rule 12 (param -> ID type_spec .)
    RPAREN          reduce using rule 12 (param -> ID type_spec .)


state 17

    (23) type_spec -> INT_TYPE .

    COMMA           reduce using rule 23 (type_spec -> INT_TYPE .)
    RPAREN          reduce using rule 23 (type_spec -> INT_TYPE .)
    LBRACE          reduce using rule 23 (type_spec -> INT_TYPE .)
    ASSIGN          reduce using rule 23 (type_spec -> INT_TYPE .)
    SEMI            reduce using rule 23 (type_spec -> INT_TYPE .)
    VAR             reduce using rule 23 (type_spec -> INT_TYPE .)
    ID              reduce using rule 23 (type_spec -> INT_TYPE .)
    IF              reduce using rule 23 (type_spec -> INT_TYPE .)
    MINUS           reduce using rule 23 (type_spec -> INT_TYPE .)
    NOT             reduce using rule 23 (type_spec -> INT_TYPE .)
    INTEGER         reduce using rule 23 (type_spec -> INT_TYPE .)
    FLOAT           reduce using rule 23 (type_spec -> INT_TYPE .)
    STRING_LITERAL  reduce using rule 23 (type_spec -> INT_TYPE .)
    RAW_STRING      reduce using rule 23 (type_spec -> INT_TYPE .)
    BOOL_LITERAL    reduce using rule 23 (type_spec -> INT_TYPE .)
    LPAREN          reduce using rule 23 (type_spec -> INT_TYPE .)
    RBRACE          reduce using rule 23 (type_spec -> INT_TYPE .)


state 18

    (24) type_spec -> FLOAT_TYPE .

    COMMA           reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    RPAREN          reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    LBRACE          reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    ASSIGN          reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    SEMI            reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    VAR             reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    ID              reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    IF              reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    MINUS           reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    NOT             reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    INTEGER         reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    FLOAT           reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    STRING_LITERAL  reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    RAW_STRING      reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    BOOL_LITERAL    reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    LPAREN          reduce using rule 24 (type_spec -> FLOAT_TYPE .)
    RBRACE          reduce using rule 24 (type_spec -> FLOAT_TYPE .)


state 19

    (25) type_spec -> STRING_TYPE .

    COMMA           reduce using rule 25 (type_spec -> STRING_TYPE .)
    RPAREN          reduce using rule 25 (type_spec -> STRING_TYPE .)
    LBRACE          reduce using rule 25 (type_spec -> STRING_TYPE .)
    ASSIGN          reduce using rule 25 (type_spec -> STRING_TYPE .)
    SEMI            reduce using rule 25 (type_spec -> STRING_TYPE .)
    VAR             reduce using rule 25 (type_spec -> STRING_TYPE .)
    ID              reduce using rule 25 (type_spec -> STRING_TYPE .)
    IF              reduce using rule 25 (type_spec -> STRING_TYPE .)
    MINUS           reduce using rule 25 (type_spec -> STRING_TYPE .)
    NOT             reduce using rule 25 (type_spec -> STRING_TYPE .)
    INTEGER         reduce using rule 25 (type_spec -> STRING_TYPE .)
    FLOAT           reduce using rule 25 (type_spec -> STRING_TYPE .)
    STRING_LITERAL  reduce using rule 25 (type_spec -> STRING_TYPE .)
    RAW_STRING      reduce using rule 25 (type_spec -> STRING_TYPE .)
    BOOL_LITERAL    reduce using rule 25 (type_spec -> STRING_TYPE .)
    LPAREN          reduce using rule 25 (type_spec -> STRING_TYPE .)
    RBRACE          reduce using rule 25 (type_spec -> STRING_TYPE .)


state 20

    (26) type_spec -> BOOL_TYPE .

    COMMA           reduce using rule 26 (type_spec -> BOOL_TYPE .)
    RPAREN          reduce using rule 26 (type_spec -> BOOL_TYPE .)
    LBRACE          reduce using rule 26 (type_spec -> BOOL_TYPE .)
    ASSIGN          reduce using rule 26 (type_spec -> BOOL_TYPE .)
    SEMI            reduce using rule 26 (type_spec -> BOOL_TYPE .)
    VAR             reduce using rule 26 (type_spec -> BOOL_TYPE .)
    ID              reduce using rule 26 (type_spec -> BOOL_TYPE .)
    IF              reduce using rule 26 (type_spec -> BOOL_TYPE .)
    MINUS           reduce using rule 26 (type_spec -> BOOL_TYPE .)
    NOT             reduce using rule 26 (type_spec -> BOOL_TYPE .)
    INTEGER         reduce using rule 26 (type_spec -> BOOL_TYPE .)
    FLOAT           reduce using rule 26 (type_spec -> BOOL_TYPE .)
    STRING_LITERAL  reduce using rule 26 (type_spec -> BOOL_TYPE .)
    RAW_STRING      reduce using rule 26 (type_spec -> BOOL_TYPE .)
    BOOL_LITERAL    reduce using rule 26 (type_spec -> BOOL_TYPE .)
    LPAREN          reduce using rule 26 (type_spec -> BOOL_TYPE .)
    RBRACE          reduce using rule 26 (type_spec -> BOOL_TYPE .)


state 21

    (6) top_declaration -> FUNC ID LPAREN param_list RPAREN . func_return LBRACE statement_list RBRACE
    (7) func_return -> . type_spec
    (8) func_return -> . empty
    (23) type_spec -> . INT_TYPE
    (24) type_spec -> . FLOAT_TYPE
    (25) type_spec -> . STRING_TYPE
    (26) type_spec -> . BOOL_TYPE
    (73) empty -> .

    INT_TYPE        shift and go to state 17
    FLOAT_TYPE      shift and go to state 18
    STRING_TYPE     shift and go to state 19
    BOOL_TYPE       shift and go to state 20
    LBRACE          reduce using rule 73 (empty -> .)

    func_return                    shift and go to state 23
    type_spec                      shift and go to state 24
    empty                          shift and go to state 25

state 22

    (9) param_list -> param COMMA . param_list
    (9) param_list -> . param COMMA param_list
    (10) param_list -> . param
    (11) param_list -> . empty
    (12) param -> . ID type_spec
    (73) empty -> .

    ID              shift and go to state 12
    RPAREN          reduce using rule 73 (empty -> .)

    param                          shift and go to state 14
    param_list                     shift and go to state 26
    empty                          shift and go to state 15

state 23

    (6) top_declaration -> FUNC ID LPAREN param_list RPAREN func_return . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 27


state 24

    (7) func_return -> type_spec .

    LBRACE          reduce using rule 7 (func_return -> type_spec .)


state 25

    (8) func_return -> empty .

    LBRACE          reduce using rule 8 (func_return -> empty .)


state 26

    (9) param_list -> param COMMA param_list .

    RPAREN          reduce using rule 9 (param_list -> param COMMA param_list .)


state 27

    (6) top_declaration -> FUNC ID LPAREN param_list RPAREN func_return LBRACE . statement_list RBRACE
    (13) statement_list -> . statement statement_list
    (14) statement_list -> . empty
    (15) statement -> . VAR ID type_spec ASSIGN expression SEMI_OPTIONAL
    (16) statement -> . VAR ID type_spec SEMI_OPTIONAL
    (17) statement -> . ID DECLARE_ASSIGN expression SEMI_OPTIONAL
    (18) statement -> . ID ASSIGN expression SEMI_OPTIONAL
    (19) statement -> . assign_statement SEMI_OPTIONAL
    (20) statement -> . control_structure
    (21) statement -> . expression SEMI_OPTIONAL
    (22) statement -> . SEMI
    (73) empty -> .
    (54) assign_statement -> . ID LSHIFT_ASSIGN expression
    (55) assign_statement -> . ID PLUS_ASSIGN expression
    (56) assign_statement -> . ID MINUS_ASSIGN expression
    (57) assign_statement -> . ID TIMES_ASSIGN expression
    (58) assign_statement -> . ID DIVIDE_ASSIGN expression
    (59) assign_statement -> . ID MOD_ASSIGN expression
    (60) assign_statement -> . ID AND_ASSIGN expression
    (61) assign_statement -> . ID OR_ASSIGN expression
    (62) assign_statement -> . ID XOR_ASSIGN expression
    (27) control_structure -> . IF expression LBRACE statement_list RBRACE else_part
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MODULO expression
    (38) expression -> . expression OR expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression EQ expression
    (41) expression -> . expression NE expression
    (42) expression -> . expression LT expression
    (43) expression -> . expression LE expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression GE expression
    (46) expression -> . expression BIT_OR expression
    (47) expression -> . expression BIT_XOR expression
    (48) expression -> . expression AND_NOT expression
    (49) expression -> . expression LSHIFT expression
    (50) expression -> . expression RSHIFT expression
    (51) expression -> . MINUS expression
    (52) expression -> . NOT expression
    (53) expression -> . factor
    (65) factor -> . INTEGER
    (66) factor -> . FLOAT
    (67) factor -> . STRING_LITERAL
    (68) factor -> . RAW_STRING
    (69) factor -> . ID
    (70) factor -> . BOOL_LITERAL
    (71) factor -> . ID DOT ID LPAREN arg_list RPAREN
    (72) factor -> . LPAREN expression RPAREN

    VAR             shift and go to state 33
    ID              shift and go to state 28
    SEMI            shift and go to state 37
    RBRACE          reduce using rule 73 (empty -> .)
    IF              shift and go to state 38
    MINUS           shift and go to state 39
    NOT             shift and go to state 40
    INTEGER         shift and go to state 42
    FLOAT           shift and go to state 43
    STRING_LITERAL  shift and go to state 44
    RAW_STRING      shift and go to state 45
    BOOL_LITERAL    shift and go to state 46
    LPAREN          shift and go to state 29

    statement_list                 shift and go to state 30
    statement                      shift and go to state 31
    empty                          shift and go to state 32
    expression                     shift and go to state 34
    assign_statement               shift and go to state 35
    control_structure              shift and go to state 36
    factor                         shift and go to state 41

state 28

    (17) statement -> ID . DECLARE_ASSIGN expression SEMI_OPTIONAL
    (18) statement -> ID . ASSIGN expression SEMI_OPTIONAL
    (54) assign_statement -> ID . LSHIFT_ASSIGN expression
    (55) assign_statement -> ID . PLUS_ASSIGN expression
    (56) assign_statement -> ID . MINUS_ASSIGN expression
    (57) assign_statement -> ID . TIMES_ASSIGN expression
    (58) assign_statement -> ID . DIVIDE_ASSIGN expression
    (59) assign_statement -> ID . MOD_ASSIGN expression
    (60) assign_statement -> ID . AND_ASSIGN expression
    (61) assign_statement -> ID . OR_ASSIGN expression
    (62) assign_statement -> ID . XOR_ASSIGN expression
    (69) factor -> ID .
    (71) factor -> ID . DOT ID LPAREN arg_list RPAREN

    DECLARE_ASSIGN  shift and go to state 47
    ASSIGN          shift and go to state 48
    LSHIFT_ASSIGN   shift and go to state 49
    PLUS_ASSIGN     shift and go to state 50
    MINUS_ASSIGN    shift and go to state 51
    TIMES_ASSIGN    shift and go to state 52
    DIVIDE_ASSIGN   shift and go to state 53
    MOD_ASSIGN      shift and go to state 54
    AND_ASSIGN      shift and go to state 55
    OR_ASSIGN       shift and go to state 56
    XOR_ASSIGN      shift and go to state 57
    PLUS            reduce using rule 69 (factor -> ID .)
    MINUS           reduce using rule 69 (factor -> ID .)
    TIMES           reduce using rule 69 (factor -> ID .)
    DIVIDE          reduce using rule 69 (factor -> ID .)
    MODULO          reduce using rule 69 (factor -> ID .)
    OR              reduce using rule 69 (factor -> ID .)
    AND             reduce using rule 69 (factor -> ID .)
    EQ              reduce using rule 69 (factor -> ID .)
    NE              reduce using rule 69 (factor -> ID .)
    LT              reduce using rule 69 (factor -> ID .)
    LE              reduce using rule 69 (factor -> ID .)
    GT              reduce using rule 69 (factor -> ID .)
    GE              reduce using rule 69 (factor -> ID .)
    BIT_OR          reduce using rule 69 (factor -> ID .)
    BIT_XOR         reduce using rule 69 (factor -> ID .)
    AND_NOT         reduce using rule 69 (factor -> ID .)
    LSHIFT          reduce using rule 69 (factor -> ID .)
    RSHIFT          reduce using rule 69 (factor -> ID .)
    SEMI            reduce using rule 69 (factor -> ID .)
    VAR             reduce using rule 69 (factor -> ID .)
    ID              reduce using rule 69 (factor -> ID .)
    IF              reduce using rule 69 (factor -> ID .)
    NOT             reduce using rule 69 (factor -> ID .)
    INTEGER         reduce using rule 69 (factor -> ID .)
    FLOAT           reduce using rule 69 (factor -> ID .)
    STRING_LITERAL  reduce using rule 69 (factor -> ID .)
    RAW_STRING      reduce using rule 69 (factor -> ID .)
    BOOL_LITERAL    reduce using rule 69 (factor -> ID .)
    LPAREN          reduce using rule 69 (factor -> ID .)
    RBRACE          reduce using rule 69 (factor -> ID .)
    DOT             shift and go to state 58


state 29

    (72) factor -> LPAREN . expression RPAREN
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MODULO expression
    (38) expression -> . expression OR expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression EQ expression
    (41) expression -> . expression NE expression
    (42) expression -> . expression LT expression
    (43) expression -> . expression LE expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression GE expression
    (46) expression -> . expression BIT_OR expression
    (47) expression -> . expression BIT_XOR expression
    (48) expression -> . expression AND_NOT expression
    (49) expression -> . expression LSHIFT expression
    (50) expression -> . expression RSHIFT expression
    (51) expression -> . MINUS expression
    (52) expression -> . NOT expression
    (53) expression -> . factor
    (65) factor -> . INTEGER
    (66) factor -> . FLOAT
    (67) factor -> . STRING_LITERAL
    (68) factor -> . RAW_STRING
    (69) factor -> . ID
    (70) factor -> . BOOL_LITERAL
    (71) factor -> . ID DOT ID LPAREN arg_list RPAREN
    (72) factor -> . LPAREN expression RPAREN

    MINUS           shift and go to state 39
    NOT             shift and go to state 40
    INTEGER         shift and go to state 42
    FLOAT           shift and go to state 43
    STRING_LITERAL  shift and go to state 44
    RAW_STRING      shift and go to state 45
    ID              shift and go to state 60
    BOOL_LITERAL    shift and go to state 46
    LPAREN          shift and go to state 29

    expression                     shift and go to state 59
    factor                         shift and go to state 41

state 30

    (6) top_declaration -> FUNC ID LPAREN param_list RPAREN func_return LBRACE statement_list . RBRACE

    RBRACE          shift and go to state 61


state 31
